@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 24-08-2006 fixed: loginscreen first activated the home window, then your prefered startup window.
  - 24-08-2006 fixed: HDD S.M.A.R.T Requesting of non (ID:17) will cause a loop request! http://www.xboxmediacenter.com/wiki/index.php?title=InfoLabels&action=submit
  - 23-08-2006 fixed: adding bookmarks wouldn't generate proper video thumbnails
  - 22-08-2006 added: songinfoduration tag to advancedsettings.xml. controls how long song info remains onscreen after song change in visualisation
